--- a/.github/workflows/invoke-workflow.yml
+++ b/.github/workflows/invoke-workflow.yml
@@ -2,31 +2,23 @@ name: invoke-workflow
 on:
   workflow_dispatch:
      inputs:
-      workflow_02:
+      image:
         description: 'ًWorkflow 2 which will be triggered'
         required: true
-        default: 'workflow_02'
-
-      workflow2_github_account:
-        description: 'GitHub Account Owner'
-        required: true
-        default: ':userName'
-
-      workflow2_repo_github:
-        description: 'repo-name'
-        required: true
-        default: ':repoName' 
+        default: 'frinx/schellar:latest'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Test
-        run: |
-          curl -X POST https://api.github.com/repos/:userName/:repoName/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACTIONS_KEY }} \
-          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
       - uses: actions/checkout@v3
+      - name: Test
+        env:
+          IMAGE: ${{ inputs.image }}
+        run: |
+          curl -L -X POST https://api.github.com/repos/Jozefiel/monorepo-api/actions/workflows/release-discovery.yml/dispatches \
+          -u "Jozefiel:${{ secrets.GITHUB_TOKEN }}"
+          -H 'Accept: application/vnd.github+json' \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          --data '{"ref":"master","inputs":{"image":"IMAGE"}}'
